# embedded_software

./: README.md
questao1/: q1_arquitetura.drawio  q1_fluxograma.drawio  q1_pseudocodigo.cpp
questao2/: Dockerfile
questao2/workspace/src/pacote1/: mem_publisher.py  package.xml  setup.cfg  setup.py
questao2/workspace/src/pacote2/: package.xml  sensor_simulator.py  setup.cfg  setup.py
questao2/workspace/src/pacote3/: findNthPrime.action  package.xml  setup.cfg  setup.py  tenth_primo.py
questao3/: q3_algoritmoAES.py  q3_unit_test.py
