<package format="3">
  <name>pacote3</name>
  <version>0.0.1</version>
  <description>Pacote que realiza busca pelo décimo número primo via ação.</description>
  <maintainer email="miguelneto0019@gmail.com">Miguel Neto</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>